WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41199
[Qt] QtScript API should be exceptions aware.
https://bugs.webkit.org/show_bug.cgi?id=41199
Summary
[Qt] QtScript API should be exceptions aware.
Jędrzej Nowacki
Reported
2010-06-25 01:17:02 PDT
The QtScript API should be enriched by these functions:
http://doc.qt.nokia.com/4.6/qscriptengine.html#clearExceptions
http://doc.qt.nokia.com/4.6/qscriptengine.html#hasUncaughtException
http://doc.qt.nokia.com/4.6/qscriptengine.html#uncaughtException
Attachments
Fix v1
(18.56 KB, patch)
2010-06-28 05:52 PDT
,
Jędrzej Nowacki
no flags
Details
Formatted Diff
Diff
Fix v1.01
(19.82 KB, patch)
2010-06-30 04:21 PDT
,
Jędrzej Nowacki
hausmann
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jędrzej Nowacki
Comment 1
2010-06-28 05:52:14 PDT
Created
attachment 59895
[details]
Fix v1
Kent Hansen
Comment 2
2010-06-28 07:36:38 PDT
LGTM
Jędrzej Nowacki
Comment 3
2010-06-29 01:37:45 PDT
Comment on
attachment 59895
[details]
Fix v1 Patch need to be rebased.
Jędrzej Nowacki
Comment 4
2010-06-30 04:21:50 PDT
Created
attachment 60108
[details]
Fix v1.01 Rebased against trunk.
Simon Hausmann
Comment 5
2010-07-02 01:25:54 PDT
Comment on
attachment 60108
[details]
Fix v1.01 r=me
WebKit Commit Bot
Comment 6
2010-07-02 01:43:49 PDT
Comment on
attachment 60108
[details]
Fix v1.01 Rejecting patch 60108 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 60108, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: webkitpy/tool/commands/stepsequence.py", line 60, in _run step(tool, options).run(state) File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 68, in run if self._has_valid_reviewer(changelog_entry): File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 50, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer'
Simon Hausmann
Comment 7
2010-07-02 03:39:01 PDT
Committed
r62377
: <
http://trac.webkit.org/changeset/62377
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug