JavaScriptCore/qt/api/qscriptvalue_p.h
@@ -445,7 +445,9 @@ QString QScriptValuePrivate::toString() const
     case JSValue:
     case JSPrimitive:
     case JSObject:
-        JSRetainPtr<JSStringRef> ptr(Adopt, JSValueToStringCopy(*m_engine, *this, /* exception */ 0));
+        JSValueRef exception = 0;
+        JSRetainPtr<JSStringRef> ptr(Adopt, JSValueToStringCopy(*m_engine, *this, &exception));
+        m_engine->setException(exception);
         return QScriptConverter::toString(ptr.get());
     }
 
@@ -459,7 +461,12 @@ qsreal QScriptValuePrivate::toNumber() const
     case JSValue:
     case JSPrimitive:
     case JSObject:
-        return JSValueToNumber(*m_engine, *this, /* exception */ 0);
+        {
+            JSValueRef exception = 0;
+            qsreal result = JSValueToNumber(*m_engine, *this, &exception);
+            m_engine->setException(exception);
+            return result;
+        }
     case CNumber:
         return u.m_number;
     case CBool:
@@ -588,9 +595,13 @@ QScriptValuePrivate* QScriptValuePrivate::toObject(QScriptEnginePrivate* engine)
         {
             if (engine != this->engine())
                 qWarning("QScriptEngine::toObject: cannot convert value created in a different engine");
-            JSObjectRef object = JSValueToObject(*m_engine, *this, /* exception */ 0);
+            JSValueRef exception = 0;
+            JSObjectRef object = JSValueToObject(*m_engine, *this, &exception);
             if (object)
                 return new QScriptValuePrivate(m_engine.constData(), object);
+            else
+                m_engine->setException(exception, QScriptEnginePrivate::NotNullException);
+
         }
         return new QScriptValuePrivate;
     case JSObject:
@@ -675,7 +686,10 @@ bool QScriptValuePrivate::equals(QScriptValuePrivate* other)
         }
     }
 
-    return JSValueIsEqual(*m_engine, *this, *other, /* exception */ 0);
+    JSValueRef exception = 0;
+    bool result = JSValueIsEqual(*m_engine, *this, *other, &exception);
+    m_engine->setException(exception);
+    return result;
 }
 
 bool QScriptValuePrivate::strictlyEquals(QScriptValuePrivate* other)
@@ -719,7 +733,10 @@ inline bool QScriptValuePrivate::instanceOf(QScriptValuePrivate* other)
 {
     if (!isJSBased() || !other->isObject())
         return false;
-    return JSValueIsInstanceOfConstructor(*m_engine, *this, *other, /* exception */ 0);
+    JSValueRef exception = 0;
+    bool result = JSValueIsInstanceOfConstructor(*m_engine, *this, *other, &exception);
+    m_engine->setException(exception);
+    return result;
 }
 
 /*!
@@ -813,8 +830,10 @@ QScriptValuePrivate* QScriptValuePrivate::call(const QScriptValuePrivate*, const
             // Make the call
             JSValueRef exception = 0;
             JSValueRef result = JSObjectCallAsFunction(*m_engine, *this, /* thisObject */ 0, argc, argv.constData(), &exception);
-            if (!result && exception)
+            if (!result && exception) {
+                m_engine->setException(exception);
                 return new QScriptValuePrivate(engine(), exception);
+            }
             if (result && !exception)
                 return new QScriptValuePrivate(engine(), result);
         }
@@ -855,9 +874,12 @@ bool QScriptValuePrivate::inherits(const char* name)
     Q_ASSERT(isJSBased());
     JSObjectRef globalObject = JSContextGetGlobalObject(*m_engine);
     JSStringRef errorAttrName = QScriptConverter::toString(name);
-    JSValueRef error = JSObjectGetProperty(*m_engine, globalObject, errorAttrName, /* exception */ 0);
+    JSValueRef exception = 0;
+    JSValueRef error = JSObjectGetProperty(*m_engine, globalObject, errorAttrName, &exception);
     JSStringRelease(errorAttrName);
-    return JSValueIsInstanceOfConstructor(*m_engine, *this, JSValueToObject(*m_engine, error, /* exception */ 0), /* exception */ 0);
+    bool result = JSValueIsInstanceOfConstructor(*m_engine, *this, JSValueToObject(*m_engine, error, &exception), &exception);
+    m_engine->setException(exception);
+    return result;
 }
 
 /*!
